<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.nygamichal.quizapp.HighScoreActivity">

    <TextView
        android:id="@+id/textViewResultTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Your score is:"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="54dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewResultTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="0" />
</RelativeLayout>
