<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="pl.nygamichal.quizapp.MainActivity">

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="340dp"
        android:layout_height="66dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="Question"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032"

        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />
    <!--android:textSize="22sp"-->
    <RadioGroup
        android:id="@+id/RadioGroup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Next"
        />

</LinearLayout>
